--- a/json/pom.xml
+++ b/json/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>tema1</artifactId>
+    <artifactId>json</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -13,19 +13,8 @@
         <maven.compiler.target>22</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
     <dependencies>
-        <!-- ejer1 -->
-        <dependency>
-            <groupId>org.graalvm.js</groupId>
-            <artifactId>js-scriptengine</artifactId>
-            <version>23.0.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.graalvm.js</groupId>
-            <artifactId>js</artifactId>
-            <version>23.0.1</version>
-        </dependency>
-        <!-- ejer2 -->
         <dependency>
             <groupId>jakarta.json</groupId>
             <artifactId>jakarta.json-api</artifactId>
@@ -36,12 +25,6 @@
             <artifactId>jakarta.json</artifactId>
             <version>2.0.1</version>
         </dependency>
-        <!-- ejer3 -->
-        <dependency>
-            <groupId>jakarta.json.bind</groupId>
-            <artifactId>jakarta.json.bind-api</artifactId>
-            <version>3.0.0</version>
-        </dependency>
         <dependency>
             <groupId>org.eclipse</groupId>
             <artifactId>yasson</artifactId>
@@ -49,6 +32,5 @@
         </dependency>
 
     </dependencies>
-
 
 </project>
