--- a/UD03/ejer_pepe/JPABiblioteca2025/pom.xml
+++ b/UD03/ejer_pepe/JPABiblioteca2025/pom.xml
@@ -19,11 +19,6 @@
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <version>2.3.232</version>
-        </dependency>
-        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>2.0.16</version>
@@ -33,7 +28,25 @@
             <artifactId>logback-classic</artifactId>
             <version>1.5.12</version>
         </dependency>
-<!--        <dependency>-->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.3.232</version>
+        </dependency>
+
+        <!-- JPA -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.6.4.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
+        <!--        <dependency>-->
 <!--            <groupId>org.eclipse.persistence</groupId>-->
 <!--            <artifactId>org.eclipse.persistence.core</artifactId>-->
 <!--            <version>2.7.10</version>-->
@@ -63,17 +76,13 @@
 <!--            <artifactId>org.eclipse.persistence.moxy</artifactId>-->
 <!--            <version>2.7.10</version>-->
 <!--        </dependency>-->
+
 <!--        <dependency>-->
 <!--            <groupId>org.eclipse.persistence</groupId>-->
-<!--            <artifactId>jakarta.persistence</artifactId>-->
-<!--            <version>2.2.3</version>-->
+<!--            <artifactId>org.eclipse.persistence.jpa.modelgen.processor</artifactId>-->
+<!--            <version>2.7.10</version>-->
+<!--            <scope>provided</scope>-->
 <!--        </dependency>-->
-        <dependency>
-            <groupId>org.eclipse.persistence</groupId>
-            <artifactId>org.eclipse.persistence.jpa.modelgen.processor</artifactId>
-            <version>2.7.10</version>
-            <scope>provided</scope>
-        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
