--- a/UD03/JPA_and_Hibernate/pom.xml
+++ b/UD03/JPA_and_Hibernate/pom.xml
@@ -43,6 +43,20 @@
         </dependency>
 
 
+        <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.48.0.0</version>
+        </dependency>
+
+        <!-- para dialectos mais extraños, como sqlite -->
+        <!-- https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-community-dialects -->
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-community-dialects</artifactId>
+            <version>6.6.5.Final</version>
+        </dependency>
     </dependencies>
 
 
