--- a/UD03/JPA_Hibernate_RetomarTrimestre/pom.xml
+++ b/UD03/JPA_Hibernate_RetomarTrimestre/pom.xml
@@ -27,6 +27,18 @@
             <artifactId>hibernate-core</artifactId>
             <version>6.6.9.Final</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.11.4</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.3.232</version>
+        </dependency>
 
     </dependencies>
 
